--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@types/fabric": "^5.3.0",
     "@types/styled-components": "^5.1.26",
+    "jest-canvas-mock": "^2.4.0",
     "prettier": "^2.8.4"
   }
 }
